# path_demo

./: .appveyor.yml  .rustfmt.toml  .travis.yml  Cargo.toml  README.md  appveyor.yml
benches/: astar.rs
ci/: before_deploy.ps1  before_deploy.sh  script.sh
lib/: lib.rs
lib/actor/: mod.rs
lib/item/: mod.rs
lib/map/: mod.rs
lib/path/: astar.rs  dijkstra.rs  mod.rs
src/: main.rs  ui.rs
src/ui/: backend.rs  mod.rs
src/ui/widgets/: map.rs  mod.rs
