[package]
name = "path_demo"
description = "A demo of advanced A*-based video game pathfinding"
license = "MPL-2.0"
homepage = "https://github.com/glfmn/path_demo"
repository = "https://github.com/glfmn/path_demo"
version = "0.1.1"
authors = ["Gwen Lofman <Gwen@Lofman.io>"]
edition = "2018"

[lib]
name = "game_lib"
path = "lib/lib.rs"

[dependencies]
tcod = "0.13"
rand = "0.6"
rand_xorshift = "0.1"
slog = "2.4.1"
slog-term = "2.4.0"
fnv = "1.0.3"
radix-heap = "0.3.3" 

[dependencies.tui]
version = "0.5"
default-features = false

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "astar"
harness = false
